GPU-1421: Fixed styling issues which caused overflows

--- a/cms-ui/apps/editor-ui/src/app/content-frame/components/aloha-button-renderer/aloha-button-renderer.component.scss
+++ b/cms-ui/apps/editor-ui/src/app/content-frame/components/aloha-button-renderer/aloha-button-renderer.component.scss
@@ -4,18 +4,8 @@
 .gtx-editor-button {
     @include gtxButtonCore;
 
-    &.icon-only {
-        padding: 0.25rem;
-        width: 2rem;
-
-        .button-icon {
-            margin: auto;
-            text-align: center;
-        }
-
-        .button-label {
-            display: none;
-        }
+    .button-label {
+        white-space: nowrap;
     }
 
     .button-icon {
@@ -30,6 +20,20 @@
 
         &.icon-right {
             margin-left: 0.5rem;
+        }
+    }
+
+    &.icon-only {
+        padding: 0.25rem;
+        width: 2rem;
+
+        .button-icon {
+            margin: auto;
+            text-align: center;
+        }
+
+        .button-label {
+            display: none;
         }
     }
 
