--- a/cms-ui/apps/editor-ui/src/app/content-frame/components/construct-controls/construct-controls.component.scss
+++ b/cms-ui/apps/editor-ui/src/app/content-frame/components/construct-controls/construct-controls.component.scss
@@ -32,6 +32,10 @@
 
     @include gtxButtonCore;
 
+    .group-label {
+        white-space: nowrap;
+    }
+
     .group-icon {
         height: 20px;
         width: 16px;
