--- a/cms-ui/apps/editor-ui/src/app/content-frame/components/editor-toolbar/editor-toolbar.component.scss
+++ b/cms-ui/apps/editor-ui/src/app/content-frame/components/editor-toolbar/editor-toolbar.component.scss
@@ -257,3 +257,9 @@
         margin-right: 0;
     }
 }
+
+@media (max-width: $aloha-size-mobile-max) {
+    .toolbar-actions .item-status {
+        display: none;
+    }
+}
