--- a/cms-ui/apps/editor-ui/src/app/content-frame/components/link-checker-controls/link-checker-controls.component.scss
+++ b/cms-ui/apps/editor-ui/src/app/content-frame/components/link-checker-controls/link-checker-controls.component.scss
@@ -17,6 +17,7 @@
         border-top-left-radius: 2px;
         border-bottom-left-radius: 2px;
         padding: 0.25rem 0.75rem;
+        white-space: nowrap;
     }
 
     .link-opener {
