--- a/cms-ui/apps/editor-ui/src/app/content-frame/components/page-editor-tabs/page-editor-tabs.component.scss
+++ b/cms-ui/apps/editor-ui/src/app/content-frame/components/page-editor-tabs/page-editor-tabs.component.scss
@@ -64,6 +64,7 @@
             user-select: none;
             color: inherit;
             text-transform: uppercase;
+            white-space: nowrap;
         }
     }
 
